fixes safari squishing text bug

--- a/_sass/components/_wins-page.scss
+++ b/_sass/components/_wins-page.scss
@@ -271,3 +271,7 @@
 		}
 	}
 }
+
+.wins-card-content > * {
+	flex: 0 0 auto;
+}
